# testVCS3

./: CMakeLists.txt  testVCS3.project
Generic/Settings/: texture_resources.xml
cmake/Modules/: FindShSDK.cmake
src/Extension/: CMakeLists.txt
src/Game/: CMakeLists.txt
src/Plugins/Plugin/: CMakeLists.txt
