set(SHINE_EDITOR_EXT_DIR "$ENV{SHINE_BASE_DIR}/Bin/Extensions" CACHE PATH "Extension directory")

FILE(MAKE_DIRECTORY ${SHINE_EDITOR_EXT_DIR})

include_directories(${SHSDK_INCLUDE_DIRS})

set(SOURCES_EXTENSION Extension.cpp Extension.h)
source_group("Extension" FILES ${SOURCES_EXTENSION})

if(WIN32)
	set(SOURCES_DLLMAIN dllmain.cpp)
else(WIN32)
	set(SOURCES_DLLMAIN)
endif(WIN32)
source_group("dll" FILES ${SOURCES_DLLMAIN})

set(EXTENSION_SOURCES ${SOURCES_DLLMAIN} ${SOURCES_EXTENSION}) # compile extension sources
set(PLUGIN_OBJECTS $<TARGET_OBJECTS:Plugin_Editor>) # embed plugin objects

add_library(Extension SHARED ${EXTENSION_SOURCES} ${PLUGIN_OBJECTS})
set_property(TARGET Extension PROPERTY FOLDER "Editor")
set_property(TARGET Extension APPEND PROPERTY COMPILE_DEFINITIONS "${SHSDK_COMPILE_DEFINITIONS}")
set_property(TARGET Extension APPEND PROPERTY COMPILE_FLAGS "${SHSDK_COMPILE_FLAGS}")
set_property(TARGET Extension APPEND PROPERTY COMPILE_DEFINITIONS "SH_EDITOR=1" "_INTERNAL_DLL") # FIXME

if (WIN32)
	set_property(TARGET Extension PROPERTY RUNTIME_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Extension PROPERTY RUNTIME_OUTPUT_DIRECTORY_DEBUG "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Extension PROPERTY RUNTIME_OUTPUT_DIRECTORY_RELEASE "${SHINE_EDITOR_EXT_DIR}")
else (WIN32)
	set_property(TARGET Extension PROPERTY LIBRARY_OUTPUT_DIRECTORY "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Extension PROPERTY LIBRARY_OUTPUT_DIRECTORY_DEBUG "${SHINE_EDITOR_EXT_DIR}")
	set_property(TARGET Extension PROPERTY LIBRARY_OUTPUT_DIRECTORY_RELEASE "${SHINE_EDITOR_EXT_DIR}")
endif (WIN32)

set_property(TARGET Extension PROPERTY PREFIX "")

target_link_libraries(Extension ${SHSDK_EDITOR_LIBRARIES})

file(COPY "Extension.configext" DESTINATION "${SHINE_EDITOR_EXT_DIR}")
